--- a/app/locales/locale-en.json
+++ b/app/locales/locale-en.json
@@ -7,5 +7,7 @@
   "PASSED_AS_INTERPOLATION": "Beginners! I'm interpolated!",
   "VARIABLE_REPLACEMENT": "Hi {{name}}",
   "BUTTON_LANG_DE": "German",
-  "BUTTON_LANG_EN": "English"
+  "BUTTON_LANG_EN": "English",
+  "Welcome": "Welcome",
+  "Powered By": "Powered by",
 }
